# py-saomsg

./: .gitignore  .readthedocs.yaml  CLAUDE.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: saomsg-tests.yml
docs/: conf.py  index.rst
docs/saomsg/: index.rst
example_clients/: pmacmmirs.py  waveserv.py
saomsg/: client.py  msgtoindi.py
saomsg/tests/: test_client.py  test_subscriber.py
scripts/: msg.tcl  msg_test.tcl
